syntax = "proto3";
package symphony.txfees.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "symphony/txfees/v1beta1/params.proto";

option go_package = "github.com/osmosis-labs/osmosis/v26/x/txfees/types";

// GenesisState defines the txfees module's genesis state.
message GenesisState {
  // params is the container of txfees parameters.
  Params params = 1 [ (gogoproto.nullable) = false ];
  string swap_fees_epoch_identifier = 2 [ (gogoproto.moretags) = "yaml:\"swap_fees_epoch_identifier\"" ];
}

message TxFeesTracker {
  repeated cosmos.base.v1beta1.Coin tx_fees = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  int64 height_accounting_starts_from = 2
    [ (gogoproto.moretags) = "yaml:\"height_accounting_starts_from\"" ];
}
